--- a/style.css
+++ b/style.css
@@ -149,5 +149,20 @@ input[type="submit"]:hover{
   opacity: 0.7;
 }
 
+ @media screen and (max-width: 360px) and (min-width: 320px) {
+  .social {
+    display: inline-flex;
+    padding: 5px;
+  }
+  .middle{
+    margin-top: 34px;
+    font-size: 15px;
+  }
+
+  .bottomleft{
+    font-size: 10px;
+    text-indent: none;
+
+  }
 
 
